fix gap between profile header and info

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -93,6 +93,7 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
+    grid-gap: 0 10px;
   }
 
   .profile__header {
